gccida/g2/loop_optimize
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/loop.c:911:4: error: expected ';' after expression
rtx v5; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/loop.c:911:5: error: use of undeclared identifier 'v5'
rtx v5; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/loop.c:919:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/loop.c:919:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/loop.c:923:4: error: expected ';' after expression
rtx v17; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/loop.c:923:5: error: use of undeclared identifier 'v17'
rtx v17; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/loop.c:924:4: error: expected ';' after expression
rtx i; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/loop.c:924:5: error: use of undeclared identifier 'i'
rtx i; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/loop.c:926:4: error: expected ';' after expression
rtx v20; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/loop.c:926:5: error: use of undeclared identifier 'v20'; did you mean 'v10'?
rtx v20; // r15 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/loop.c:916:5: note: 'v10' declared here
int v10; // r15d 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/loop.c:929:4: error: expected ';' after expression
rtx real_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/loop.c:929:5: error: use of undeclared identifier 'real_insn'; did you mean 'next_insn'?
rtx real_insn; // rax 
    ^~~~~~~~~
    next_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/rtl.h:1347:12: note: 'next_insn' declared here
extern rtx next_insn                    PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/loop.c:935:4: error: expected ';' after expression
rtx v29; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/loop.c:935:5: error: use of undeclared identifier 'v29'
rtx v29; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/loop.c:956:4: error: expected ';' after expression
rtx v50; // r8 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/loop.c:956:5: error: use of undeclared identifier 'v50'
rtx v50; // r8 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/loop.c:959:4: error: expected ';' after expression
rtx v53; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/loop.c:959:5: error: use of undeclared identifier 'v53'
rtx v53; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/loop.c:961:4: error: expected ';' after expression
rtx v55; // rbx 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_optimize/src/obj/loop.o] Error 1
